--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="onSecondaryContainer">#131C2B</color>
     <color name="background">#F9F9FF</color>
     <color name="onBackground">#191C20</color>
+    <color name="yellow">#ffd230</color>
 </resources>
